# SearxngMCP

./: .gitignore  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  run-server.sh
searxng/: settings.yml
searxng-config/: config.json
src/searxng_mcp/: __init__.py  server.py
src/searxng_mcp/config/: __init__.py  loader.py  models.py
src/searxng_mcp/tools/: __init__.py  search.py
